k8s/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: default
spec:
  selector:
    matchLabels:
     app: flask-app
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: jpedronan/flight-app:0.0.1
        ports:
         - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: default
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
