k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-app-ingress
  annotations:
    cert-manager.io/issuer: flight-app-issuer
    kubernetes.io/ingress.class : nginx
spec:
  rules:
  - host: flight-app.flightsnotfeelings.shop
    http:
      paths:
        - backend:
            service:
              name: flask-app
              port: 
                number: 5000
          path: /
          pathType: ImplementationSpecific
  tls:
   - hosts:
     - flight-app.flightsnotfeelings.shop
     secretName: flight-app-certificate
